# Estructuras-de-Datos-2025-1

./: .gitignore  Estructura.org  README.md
Clases/Clase-14-01-25/: Vector.cpp  Vector.hpp  main.cpp
Clases/Clase-15-01-25/Clase-14-01-25/: CMakeLists.txt  Vector.cpp  Vector.hpp  main.cpp
Clases/Clase-17-01-25/Clase-15-01-25/: Makefile  Makefile~  Vector.cpp  Vector.cpp~  Vector.hpp  main.cpp  main.cpp~
Clases/Clase-24-01-25/PruebaPilaTamFijo/: Makefile  Pila.cpp  Pila.hpp  main.cpp
Clases/Clase-24-01-25/PruebaVector/: Doxyfile  Makefile  Vector.cpp  main  main.cpp
Clases/PruebaCola/: ColaEspecificacion.org  ColaEspecificacion.org_archive  ColaEspecificacion.tex
Clases/PruebaCola/Headers/: Cola.hpp
Clases/PruebaCola/Sources/: main.cpp
Clases/PruebaCola/Templates/: Cola.tpp  apellidos.org
Clases/PruebaPilaDinamica/Headers/: Complejo.hpp  Expresion.hpp  Pila.hpp
Clases/PruebaPilaDinamica/Sources/: Expresion.cpp  Pila.cpp  Polinomio.cpp  Vector.cpp  main.cpp
Clases/PruebaPilaDinamica/Templates/: Pila.tpp
Clases/PruebaPilaTamFijoPlantilla/: Pila.cpp  Pila.hpp  Pila.tpp  main.cpp
Clases/PruebaPilaTamVar/: CMakeLists.txt  Doxyfile  Pila.cpp  Pila.hpp  Pila.tpp  Vector.cpp  Vector.hpp  main.cpp
Clases/PruebaPilaTamVar/latex/: Pila_8hpp_source.tex  Vector_8hpp.tex  Vector_8hpp_source.tex  annotated.tex  classPila.tex  classVector.tex  files.tex  refman.tex
Clases/PruebaVector/: Makefile
Clases/PruebaVector/Headers/: Vector.hpp
Clases/PruebaVector/Sources/: Vector.cpp  main.cpp
docs/: README.md  index.html  style.css
(+258 files in other folders)
